--- a/nginx.conf
+++ b/nginx.conf
@@ -21,31 +21,32 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    server {
-        listen       3000;
-        server_name  localhost;
+server {
+    listen       80;
+    listen       [::]:80;
+    server_name  jonathantelep.com www.jonathantelep.com;
 
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html;
-            try_files $uri $uri/ /index.html;
-        }
-
-        location /postgres-visualizer {
-            proxy_pass http://localhost:3005;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect off;
-        }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
     }
+
+    location /postgres-visualizer {
+        proxy_pass http://localhost:3005;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+}
 }
