--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -31,6 +31,10 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
+        location = /postgres-visualizer {
+            return 301 /postgres-visualizer/;
+        }
+        
         location /postgres-visualizer {
             proxy_pass http://${POSTGRES_HOST}:3005/;
             proxy_http_version 1.1;
