--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -35,6 +35,18 @@ http {
             return 301 /postgres-visualizer/;
         }
 
+        location ^~ /postgres-visualizer/api/ {
+            proxy_pass http://${POSTGRES_HOST}:6005/api/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
+        }
+
         location ^~ /postgres-visualizer/ {
             proxy_pass http://${POSTGRES_HOST}:3005;
             proxy_http_version 1.1;
