--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -31,11 +31,11 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        location = /postgres-visualizer {
-            return 301 /postgres-visualizer/;
+        location = /postgres {
+            return 301 /postgres/;
         }
 
-        location ^~ /postgres-visualizer/api/ {
+        location ^~ /postgres/api/ {
             proxy_pass http://${POSTGRES_HOST}:6005/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -47,7 +47,7 @@ http {
             proxy_redirect off;
         }
 
-        location ^~ /postgres-visualizer/ {
+        location ^~ /postgres/ {
             proxy_pass http://${POSTGRES_HOST}:3005;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -57,6 +57,20 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_redirect off;
+        }
+
+        location = /api/space {
+            proxy_pass https://ll.thespacedevs.com/2.3.0/launches/upcoming/?limit=5&mode=list;
+            proxy_ssl_server_name on;
+            proxy_set_header Host ll.thespacedevs.com;
+            proxy_set_header Accept application/json;
+        }
+
+        location = /api/mrate {
+            proxy_pass https://api.stlouisfed.org/fred/series/observations?series_id=MORTGAGE30US&api_key=${FRED_API_KEY}&file_type=json&sort_order=desc&limit=1;
+            proxy_ssl_server_name on;
+            proxy_set_header Host api.stlouisfed.org;
+            proxy_set_header Accept application/json;
         }
 
         error_page   500 502 503 504  /50x.html;
