--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+    "type": "module",
     "engines": {
       "node": ">=22.0.0"
+    },
+    "scripts": {
+      "start": "node server.js"
     }
   }
   
