--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -59,6 +59,22 @@ http {
             proxy_redirect off;
         }
 
+        location = /json {
+            return 301 /json/;
+        }
+
+        location ^~ /json/ {
+            proxy_pass http://${POSTGRES_HOST}:3006/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
+        }
+
         location = /api/space {
             proxy_pass https://ll.thespacedevs.com/2.3.0/launches/upcoming/?limit=5&mode=list;
             proxy_ssl_server_name on;
