--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -32,7 +32,15 @@ http {
         }
 
         location = /postgres {
-            return 301 /postgres/;
+            proxy_pass http://${POSTGRES_HOST}:3005/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
         }
 
         location ^~ /postgres/api/ {
@@ -60,7 +68,15 @@ http {
         }
 
         location = /json {
-            return 301 /json/;
+            proxy_pass http://${POSTGRES_HOST}:3006/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
         }
 
         location ^~ /json/ {
