--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -32,7 +32,7 @@ http {
         }
 
         location = /postgres {
-            proxy_pass http://${POSTGRES_HOST}:3005/;
+            proxy_pass http://${POSTGRES_HOST}:3005/postgres;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
